@@ -1,5 +1,11 @@
 2007-12-04  Stefan Kost  <ensonic@users.sf.net>
 
+	* tests/gobject/src/giface.c:
+	* tests/gobject/src/gobject.c:
+	  Little test cleanup. The bug was already fixed.
+
+2007-12-04  Stefan Kost  <ensonic@users.sf.net>
+
 	* tests/gobject/docs/tester-sections.txt:
 	* tests/gobject/docs/tester.types:
 	* tests/gobject/src/Makefile.am:
